# uniflow

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUN_WEBAPP.md  SECURITY.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: android_build.yml  build.yml  ci.yml  issue-bot.yml  release.yml  scheduled-release.yml
android_client/: buildozer.spec  main.py
benches/: transfer_bench.rs
docs/: _config.yml  architecture.md  client-contract.md  community-submissions.md  index.html  module01-universal-cloud-connector.md  module03-p2p-network.md  module04-intelligence-optimiser.md  module05-security.md  module06-multi-surface-ui.md  normalization-matrix.md  phase1-delta-engine.md
proto/: rclone_bridge.proto
src/: config.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  web.rs
src/application/: mod.rs  ports.rs
src/application/services/: job_service.rs  mod.rs
src/domain/: mod.rs  models.rs  plan.rs  profile.rs
src/infrastructure/: mod.rs  transport_router.rs
src/infrastructure/cloud/: mod.rs  rclone_client.rs  rclone_cloud_transport.rs
src/infrastructure/credentials/: env_vault.rs  mod.rs
src/infrastructure/delta/: blake3_hasher.rs  librsync.rs  mod.rs
src/infrastructure/intelligence/: engine.rs  hardware.rs  mod.rs  offload.rs  optimizer.rs  planner.rs  probes.rs  profiler.rs
src/infrastructure/mobile/: mod.rs
src/infrastructure/p2p/: iroh_p2p_transport.rs  mod.rs  protocol.rs
src/infrastructure/persistence/: in_memory.rs  mod.rs  sled_repo.rs
src/infrastructure/security/: access_control.rs  audit.rs  encryption.rs  mod.rs  tls.rs
src/infrastructure/transfer/: adapters.rs  control.rs  frame.rs  local_delta.rs  mod.rs  normalize.rs  parallel.rs  paths.rs
src/infrastructure/transport/: mod.rs  noop.rs
tests/: parallel_transfer.rs
